# helix

./: .gitignore  README.md  setup.sh
memory/: Dockerfile  README.md  pyproject.toml
memory/config/: bootstrap_entities.yaml  settings.yaml
memory/helix_memory/: config.py
memory/helix_memory/anatomy/: __init__.py  api.py  cache.py  extractor.py  scanner.py
memory/helix_memory/cli/: __init__.py  app.py
memory/helix_memory/core/: __init__.py  backup.py  compactor.py  embeddings.py  file_writer.py  resolver.py  search.py  store.py  world_state_gen.py
memory/helix_memory/mcp/: __init__.py  __main__.py  server.py
memory/helix_memory/models/: __init__.py  base.py  entity.py  interaction.py  world_state.py
memory/helix_memory/tools/: __init__.py  finance_tools.py  read_tools.py  system_tools.py  write_tools.py
memory/helix_memory/utils/: __init__.py  fuzzy_match.py  platform.py  text_processing.py
memory/scripts/: bootstrap.py  health_check.py  init_collections.py  migrate.py
memory/tests/: __init__.py
tui/: Cargo.toml
tui/src/: app.rs  config.rs  debug_scan.rs  history.rs  layout.rs  lib.rs  main.rs  memory_state.rs  scanner.rs  sessions.rs  status.rs  theme.rs
tui/src/ambient/: breathing_glow.rs  cosmic_eye.rs  fireflies.rs  fractal_plasma.rs  lava_lamp.rs  matrix_rain.rs  mod.rs
tui/src/mascot/: characters.rs  mod.rs  root_v2.rs
tui/src/widgets/: activity_feed.rs  context_gauge.rs  finance_overlay.rs  history_overlay.rs  memory_explorer.rs  memory_panel.rs  mod.rs  session_timer.rs  system_monitor.rs
tui/src/widgets/visualizer/: circular.rs  (+13 more)
(+6 files in other folders)
