[package]
name = "helix-tui"
version = "0.1.0"
edition = "2021"
description = "HELIX — Animated TUI dashboard for AI CLI sessions"

[[bin]]
name = "helix"
path = "src/main.rs"

[lib]
name = "helix_tui"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
notify = "7"
sysinfo = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
chrono = "0.4"
shellexpand = "3"
cpal = "0.15"
rustfft = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
